--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /*Parte de Seccion_Student*/
 @media screen and (min-width: 992px) {
   .seccion-student {
@@ -54,3 +53,31 @@
   box-shadow: 0px 3px 43px 4px rgba(38, 153, 251, 0.53);
 }
 /*Fin Seccion_Student*/
+
+/*Parte de Seccion Mision y Vision*/
+@media screen and (min-width: 992px) {
+  .seccion_MisionYVision {
+    height: 100vh;
+  }
+}
+.seccion_MisionYVision {
+  -webkit-box-shadow: inset -1px -3px 47px -17px rgba(38, 153, 251, 1);
+  -moz-box-shadow: inset -1px -3px 47px -17px rgba(38, 153, 251, 1);
+  box-shadow: inset -1px -3px 47px -17px rgba(38, 153, 251, 1);
+}
+.circulo {
+  width: 100%;
+  /*border-radius: 200px 200px 200px 200px;*/
+  /*-moz-border-radius: 200px 200px 200px 200px;*/
+  /*-webkit-border-radius: 200px 200px 200px 200px;*/
+  border: 2px solid #000000;
+  border-radius: 50%;
+}
+.circulo:after {
+  content: "";
+  padding-bottom: 100%;
+  display: block;
+}
+.vision {
+}
+/*Fin de Misión y vision*/
