--- a/css/style.css
+++ b/css/style.css
@@ -133,10 +133,15 @@ body::-webkit-scrollbar-thumb {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(34, 40, 49, 0.5);
+  /*background: rgba(34, 40, 49, 0.5);*/
+
+  background-image: radial-gradient(
+  rgba(255, 255, 255, 0.1) ,
+  rgba(50, 50, 50, 0.8) 60%
+  );
   /*background-image: linear-gradient(*/
   /*rgba(255, 255, 255, 0.1),*/
-  /*rgba(34, 40, 49, 0.7)*/
+  /*rgba(34, 40, 49, 1)*/
   /*);*/
 }
 .circulo {
