--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,12 @@ body::-webkit-scrollbar-thumb {
   background-image: url("../img/About_Mobile/reserveXl.png");
   background-position-x: 29%;
   background-position-y: 8%;
-  background-size: 54%;
+  background-size: 54% 80%;
   background-repeat: no-repeat;
+}
+
+blockquote{
+  border-left: 5px solid #2699fb;
 }
 /*fin seccion about mobile*/
 /*seccion de about call*/
@@ -37,7 +41,6 @@ body::-webkit-scrollbar-thumb {
 .about-content{
   margin-top: 5px;
 }
-
 
 @media screen and (min-width: 992px) {
   .about-description{
